fixed the z-index of the nav

--- a/less/app.less
+++ b/less/app.less
@@ -38,6 +38,7 @@ p {
   padding: 0.01em 0em 0.01em 0em;
   width: 100%;
   position: fixed;
+  z-index: 200;
 
   @media screen and (min-width: @screen-large) {
     padding: 1.5em 2em 1.5em 0em;
@@ -889,7 +890,7 @@ span.side-project-name span {
 .modal {
   display: none;    //hidden by default
   position: fixed;  //don't mover around
-  z-index: 20000;       //stay on top
+  z-index: 100;       //stay on top
   padding-top: 0;   //start at the top of the screen
   left: 0;
   top: 0;
